# CollatzSeq

./: CMakeLists.txt  README.md  collatzseq.cpp  collatzseq.h  csMain.cpp  threadingMain.cpp
.github/workflows/: tcollatz.yml
bigint/: CMakeLists.txt  collatzseq.cpp  collatzseq.h  csMain.cpp
std/: CMakeLists.txt  collatzseq.cpp  collatzseq.h  csMain.cpp
test/: test_cs.cpp
